dark mode texts fix

--- a/microsite/src/components/HomepageFeatures/styles.module.css
+++ b/microsite/src/components/HomepageFeatures/styles.module.css
@@ -10,7 +10,11 @@
   width: 200px;
 }
 
-.footer {
-  margin-top: 50px; /* Adjust as needed */
+[data-theme='dark'] .featureSvg {
+  fill: white;
 }
 
+.footer {
+  margin-top: 50px;
+  /* Adjust as needed */
+}
